# server/index.js
@@ -11,6 +11,7 @@ import { redeemRouter } from './routes/redeem.js'
 import { supportRouter } from './routes/support.js'
 import { adminRouter } from './routes/admin.js'
 import { downloadsRouter } from './routes/downloads.js'
+import { launcherRouter } from './routes/launcher.js'
 import { mailRouter } from './routes/mail.js'
 import { mountDocs } from './routes/docs.js'
 import { nowpaymentsWebhookHandler } from './routes/webhook.js'
@@ -48,6 +49,7 @@ app.use('/api/redeem', redeemRouter)
 app.use('/api/support', supportRouter)
 app.use('/api/admin', adminRouter)
 app.use('/api/downloads', downloadsRouter)
+app.use('/api/launcher', launcherRouter)
 app.use('/api/mail', mailRouter)
 mountDocs(app)
 
